--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter example</title>
-    <link rel="stylesheet" href="style.css"  
+    <link rel="stylesheet" href="styles.css"  
 </head>
 <body>
       
@@ -35,6 +35,7 @@ Click on refresh to reset previous entries or start counting again with incremen
   <button id="refresh-btn" onclick="refresh()"> REFRESH previous entries </button>
 
 </div> 
+
 <script src="counter.js"> </script> 
 </body>
 </html>
